projects/instavote/dev/vote-dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: vote
  namespace: instavote
spec:
  strategy: 
    type: Rolling
    rollingParams: 
      maxSurge: 2
      maxUnavailable: 1
      intervalSeconds: 20
  replicas: 12
  selector: 
    role: vote
    version: v2
  template: 
    metadata:
      name: vote
      labels:
        app: python
        version: v2
        role: vote
    spec:
      containers:
      - name: app
        image: kapuveera/oc-vote:v2
