projects/instavote/dev/vote-svc.yaml
apiVersion: v1 
kind: Service
metadata:
  name: vote 
  namespace: instavote
spec:
  ports: 
    - port: 80
      targetPort: 8080 
      nodePort: 30200
  type: NodePort
  selector: 
    role: vote
