projects/instavote/dev/vote-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vote-k8s
  namespace: instavote
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: vote.example.com
    http:
      paths:
      - backend:
          serviceName: vote-k8s
          servicePort: 80
